app/styles/main.scss
$icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/bootstrap/";
$fa-font-path: "/bower_components/fontawesome/fonts";


// bower:scss
@import "../../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
// endbower
@import "../../bower_components/fontawesome/scss/font-awesome.scss";




@import "colors.scss";

.browsehappy {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* Space out content a bit */
body {
    // padding-top: 20px;
    padding-bottom: 20px;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
    padding-left: 15px;
    padding-right: 15px;
}

/* Custom page header */
.header {
    border-bottom: 1px solid #e5e5e5;

    /* Make the masthead heading the same height as the navigation */
    h3 {
        margin-top: 0;
        margin-bottom: 0;
        line-height: 40px;
        padding-bottom: 19px;
    }
}

/* Custom page footer */
.footer {
    padding-top: 19px;
    color: #777;
    border-top: 1px solid #e5e5e5;
}

.container-narrow > hr {
    margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
    text-align: center;
    border-bottom: 1px solid #e5e5e5;
    .btn {
        font-size: 21px;
        padding: 14px 24px;
    }
}

/* Supporting marketing content */
.marketing {
    margin: 40px 0;
    p + h4 {
        margin-top: 28px;
    }
}

section {
  padding-bottom: 20px;
}

section:nth-child(odd) {
  background: $jubDarkBlue;

  > * {
    color: white;
  }

  .well {
    color: black;
  }
}

section:nth-child(even) {
  box-shadow: 0px 1px 4px black;
}

header.attached-top {
  padding-left: 10px;
  z-index: 999999;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  // height: 90px;
  padding-top: 20px;
  padding-bottom: 20px;
  background: white;
  box-shadow: 0px 1px 4px black;
  vertical-align: middle;

  .nav {
    a {
      background: none;
      border-radius: 0;
      color: $jubDarkBlue;
    }

    li.active > a{
      border-bottom: 4px solid $jubDarkBlue;
    }

    li:hover, li:focus {
      color: white;
      background: $jubLightBlue;
      &.active > a {
        background: $jubLightBlue;
      }
    }
  }
}

.btn-jub {
  @include button-variant(white, $jubDarkBlue, darken($jubDarkBlue, 5%));
}

.logoHeader {
  height: 39px;
  margin-left: 10px;
}

body {
  padding-top: 79px;
}

.itemsIcon {
  width: 100%;
  text-align: center;
  font-size: 8rem;
  color: $jubDarkBlue;
}

.fullsize-image-header {
  width: 100%;
  height: auto;
  padding-top: 50px;
  padding-bottom: 50px;
  text-align: center;
  background: url('/images/computer_header.jpg') no-repeat fixed;
  background-position-x: right;
  background-position-y: 60px;
  background-size: 100%;
  color: white;

  .edition-title {
    margin-top: 0px;
  }

  .centered-logo {
    width: 500px;
  }
}

.centered-logo.plain {
  display: none;
}

.faqEntry {
  h4 {
    border-bottom: 1px solid white;
  }
}

.magin-jacobs-sponsor {
  .lead {
    margin-bottom: 0;
  }
  margin-bottom: 2em;
}

.bold-face {
  font-weight: bold;
}

.margin-button {
  margin-right: 1em;
}

@media screen and (max-width: 990px) {
  .fullsize-image-header {
    .centered-logo {
      width: 300px;
    }
  }
}

@media screen and (max-width: 790px) {
  .fullsize-image-header {
    padding-top: 20px;
    paddint-bottom: 20px;
    .centered-logo {
      width: 200px;
    }
    h1.edition-title {
      font-size: 20px;
    }

    h3.edition-title {
      font-size: 15px;
    }
  }
}

@media screen and (max-width: 468px) {
  body {
    padding-top: 122px;
  }
  .fullsize-image-header {
    background-position-y: 115px;
  }
}

@media screen and (max-width: 580px) {
  .centered-logo:not(.plain) {
    display: none;
  }

  .centered-logo.plain {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}


/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
    .container {
        max-width: 730px;
    }

    /* Remove the padding we set earlier */
    .header,
    .marketing,
    .footer {
        padding-left: 0;
        padding-right: 0;
    }

    /* Space out the masthead */
    .header {
        margin-bottom: 30px;
    }

    /* Remove the bottom border on the jumbotron for visual effect */
    .jumbotron {
        border-bottom: 0;
    }
}

